basic interface + footer

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <input id="promptInfo"><br></br>
     <button id="mainButton">Generate Schedule</button>
 </body>
+
+<div id="planner-output"></div>
 <link rel="stylesheet" href="style.css">
 
-<footer></footer>
+<footer>
+    <p>Thanks for using the AI Daily Planner</p>
+</footer>
 
 </html>
