--- a/about.html
+++ b/about.html
@@ -16,13 +16,17 @@
         </nav>
     </header>
     <h1>About</h1>
-    <p>Daily planner was created by Drew Markham, a sophomore at Redwood High School and a member of the class of 2027.
-    </p>
-    <p>Daily planner was built to streamline the process of planning your day. </p>
-    <p>Drew often found himself unable to reach his peak productivity due to inneficient or low effort planning leading
-        to procrastination and wasting time.</p>
-    <p>Daily planner allows for a quick and easy way to create an easy to understand, and optimized schedule to make
-        your day as easy as can be.</p>
+    <div id="bio">
+        <p>Daily planner was created by Drew Markham, a sophomore at Redwood High School and a member of the class of
+            2027.
+        </p>
+        <p>Daily planner was built to streamline the process of planning your day. </p>
+        <p>Drew often found himself unable to reach his peak productivity due to inneficient or low effort planning
+            leading
+            to procrastination and wasting time.</p>
+        <p>Daily planner allows for a quick and easy way to create an easy to understand, and optimized schedule to make
+            your day as easy as can be.</p>
+    </div>
 </body>
 
 <footer>
