--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         myButton.addEventListener('click', async () => {
             inputValue = input.value;
+            myButton.innerHTML = "Generating...";
             const data = await fetch("http://localhost:8080/process", {
                 method: "POST",
                 headers: { 'Content-Type': 'application/json' },
@@ -34,6 +35,7 @@
             });
             const result = await data.json();
             document.getElementById("plannerOutput").innerHTML = result.planner.replace(/\n/g, '<br>');
+            myButton.innerHTML = "Generate";
         })
     </script>
 </body>
