--- a/about.html
+++ b/about.html
@@ -25,12 +25,4 @@
             leading
             to procrastination and wasting time.</p>
         <p>Daily planner allows for a quick and easy way to create an easy to understand, and optimized schedule to make
-            your day as easy as can be.</p>
-    </div>
-</body>
-
-<footer>
-    <p>@ 2025 Andrew Markham</p>
-</footer>
-
-</html>
+            your day as easy as can be.</p
